🐛 FIX: Align classic editor images correctly (#160)

--- a/assets/sass/07-utilities/measure.scss
+++ b/assets/sass/07-utilities/measure.scss
@@ -7,6 +7,10 @@ footer * {
 	max-width: var(--global--spacing-measure);
 }
 
+main img {
+	max-width: 100%;
+}
+
 html,
 body,
 div,
