--- a/style-rtl.css
+++ b/style-rtl.css
@@ -3971,6 +3971,10 @@ footer * {
 	max-width: var(--global--spacing-measure);
 }
 
+main img {
+	max-width: 100%;
+}
+
 html,
 body,
 div,
